Removed comments and logs